<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>canopen_tests</name>
  <version>0.2.11</version>
  <description>Package with tests for ros2_canopen</description>
  <maintainer email="cmh@ipa.fraunhofer.de">Christoph Hellmann Santos</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>lely_core_libraries</build_depend>

  <exec_depend>canopen_402_driver</exec_depend>
  <exec_depend>canopen_core</exec_depend>
  <exec_depend>canopen_proxy_driver</exec_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>forward_command_controller</exec_depend>

  <exec_depend>canopen_fake_slaves</exec_depend>
  <exec_depend>canopen_ros2_controllers</exec_depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
